menambah daftar rekomendasi

--- a/pss.html
+++ b/pss.html
@@ -46,19 +46,19 @@
         <!-- Tab Navigation -->
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="true">Domain 1</button>
+                <button class="nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="true">Modul 1</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab" aria-controls="tab2" aria-selected="false">Domain 2</button>
+                <button class="nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab" aria-controls="tab2" aria-selected="false">Modul 2</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button" role="tab" aria-controls="tab3" aria-selected="false">Domain 3</button>
+                <button class="nav-link" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button" role="tab" aria-controls="tab3" aria-selected="false">Modul 3</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="tab4-tab" data-bs-toggle="tab" data-bs-target="#tab4" type="button" role="tab" aria-controls="tab4" aria-selected="false">Domain 4</button>
+                <button class="nav-link" id="tab4-tab" data-bs-toggle="tab" data-bs-target="#tab4" type="button" role="tab" aria-controls="tab4" aria-selected="false">Modul 4</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="tab5-tab" data-bs-toggle="tab" data-bs-target="#tab5" type="button" role="tab" aria-controls="tab5" aria-selected="false">Domain 5</button>
+                <button class="nav-link" id="tab5-tab" data-bs-toggle="tab" data-bs-target="#tab5" type="button" role="tab" aria-controls="tab5" aria-selected="false">Modul 5</button>
             </li>
         </ul>
 
@@ -66,7 +66,7 @@
         <div class="tab-content border border-top-0 p-3" id="myTabContent">
             <!-- Domain 1 SDI -->
             <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
-                <h3>Domain 1. Prinsip Satu Data Indonesia</h3>
+                <h3>1. Prinsip Satu Data Indonesia</h3>
                 <br>
                 <div class="accordion" id="accordionTab1">
                     <div class="accordion-item">
@@ -106,6 +106,10 @@
                                 <p>• Metadata kegiatan statistik adalah sekumpulan atribut informasi yang memberikan gambaran/dokumentasi dari penyelenggaraan kegiatan statistik.</p>
                                 <p>• Metadata variabel adalah sekumpulan atribut informasi yang memberikan gambaran/dokumentasi dari penyusunan suatu variabel, standar ukuran dan satuan yang digunakan, aturan pengisian, bentuk pertanyaan yang digunakan, dan informasi lain yang mendukung dasar pemilihan suatu variabel dalam kegiatan statistik.</p>
                                 <p>• Metadata indikator adalah sekumpulan atribut informasi yang memberikan gambaran/dokumentasi dasar terbentuknya suatu indikator dalam upaya memberikan pemahaman dan penggunaan secara tepat dari suatu indikator.</p>
+                                <br>
+                                <p>
+                                    <a href="https://sirusa.web.bps.go.id/metadata/files/Formulir%20Metadata%20Statistik.zip">Unduh Form Metadata Statistik</a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -158,7 +162,7 @@
 
             <!-- Domain 2 Kualitas Data -->
             <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
-                <h3>Domain 2. Kualitas Data</h3>
+                <h3>2. Kualitas Data</h3>
                 <br>
                 <div class="accordion" id="accordionTab2">
                     <!-- 10 -->
@@ -308,7 +312,7 @@
 
             <!-- Domain 3 Probis -->
             <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-                <h3>Domain 3. Proses Bisnis Statistik</h3>
+                <h3>3. Proses Bisnis Statistik</h3>
                 <br>
                 <div class="accordion" id="accordionTab3">
                     <div class="accordion-item">
@@ -428,7 +432,7 @@
 
             <!-- Domain 4 Kelembagaan -->
             <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
-                <h3>Domain 4. Kelembagaan</h3>
+                <h3>4. Kelembagaan</h3>
                 <br>
                 <div class="accordion" id="accordionTab4">
                     <div class="accordion-item">
@@ -624,7 +628,7 @@
 
             <!-- Domain 5 SSN -->
             <div class="tab-pane fade" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
-                <h3>Domain 5. Sistem Statistik Nasional</h3>
+                <h3>5. Sistem Statistik Nasional</h3>
                 <br>
                 <div class="accordion" id="accordionTab5">
                     <div class="accordion-item">
@@ -763,27 +767,6 @@
     </main>
 
     <main class="container my-4">
-        <div class="accordion" id="pss">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingpss">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsepss" aria-expanded="false" aria-controls="collapsepss">
-                        Laporkan Kegiatan Pembinaan
-                    </button>
-                </h2>
-                <div id="collapsepss" class="accordion-collapse collapse" aria-labelledby="headingpss" data-bs-parent="#accordionpss">
-                    <div class="accordion-body">
-                        <br>
-                        <p>
-                            <a href="https://sirusa-backend.bps.go.id/pembinaan/public" target="_blank">Lapor Kegiatan Pembinaan</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </main>
-
-    <main class="container my-4">
         <div class="accordion" id="daftardata">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingdata">
@@ -804,6 +787,48 @@
                                 </li>
                             </ul>
                             
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </main>
+
+    <main class="container my-4">
+        <div class="accordion" id="romantik">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingromantik">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseromantik" aria-expanded="false" aria-controls="collapseromantik">
+                        Daftar Rekomendasi
+                    </button>
+                </h2>
+                <div id="collapseromantik" class="accordion-collapse collapse" aria-labelledby="headingromantik" data-bs-parent="#accordionromantik">
+                    <div class="accordion-body">
+                        <br>
+                        <p>
+                            <a href="https://romantik.web.bps.go.id/rekomendasi-terbit?search=&tahun=2025&provinsi=3200" target="_blank">2025</a> | <a href="https://romantik.web.bps.go.id/rekomendasi-terbit?search=&tahun=2024&provinsi=3200" target="_blank">2024</a> | <a href="https://romantik.web.bps.go.id/rekomendasi-terbit?search=&tahun=2023&provinsi=3200" target="_blank">2023</a> | <a href="https://romantik.web.bps.go.id/rekomendasi-terbit?search=&tahun=2022&provinsi=3200" target="_blank">2022</a> | <a href="https://romantik.web.bps.go.id/rekomendasi-terbit?search=&tahun=2021&provinsi=3200" target="_blank">2021</a> | <a href="https://romantik.bps.go.id/site/kegiatan/?kueri=jawa+barat&yt0=" target="_blank">Sebelumnya</a> | <a href="https://romantik.bps.go.id/files/Formulir_FP-KPA.docx" target="_blank">Unduh Formulir Pemberitahuan Kompilasi Produk Administrasi</a> | <a href="https://romantik.bps.go.id/files/Formulir_FS3.doc" target="_blank">Unduh Formulir Pemberitahuan Survei Statistik Sektoral</a> | <a href="https://romantik.web.bps.go.id/panduan" target="_blank">Panduan Romantik</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </main>
+
+    <main class="container my-4">
+        <div class="accordion" id="pss">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingpss">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsepss" aria-expanded="false" aria-controls="collapsepss">
+                        Laporkan Kegiatan Pembinaan
+                    </button>
+                </h2>
+                <div id="collapsepss" class="accordion-collapse collapse" aria-labelledby="headingpss" data-bs-parent="#accordionpss">
+                    <div class="accordion-body">
+                        <br>
+                        <p>
+                            <a href="https://sirusa-backend.bps.go.id/pembinaan/public" target="_blank">Lapor Kegiatan Pembinaan</a>
                         </p>
                     </div>
                 </div>
