menambah link di menu cantik

--- a/cantik.html
+++ b/cantik.html
@@ -134,6 +134,9 @@
                             <div class="accordion-body">
                                 <br>
                                 <p>Dalam menyusun program/kegiatan, apakah desa/kelurahan sudah melakukan identifikasi data yang dibutuhkan?</p>
+                                <p>
+                                    <a href="https://docs.google.com/spreadsheets/d/1JpVmUdnCuWZHoyeV38xwib9Faa59j_PP_h1Ux5ygKYE/edit?usp=sharing" target="_blank">Contoh Daftar Kebutuhan Data Desa/Kelurahan</a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -156,6 +159,9 @@
                                     <li>Pelatihan/Briefing Petugas</li>
                                     <li>Data hasil pengumpulan (Hasil Entry/Hasil Kompilasi)</li>
                                 </ol>
+                                <p>
+                                    <a href="https://drive.google.com/file/d/1EqRNPp19xhPI7Njc_yEii2QQvBV2WPb1/preview" target="_blank">Baca Modul Pengumpulan Data</a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -169,6 +175,12 @@
                             <div class="accordion-body">
                                 <br>
                                 <p>Apakah agen statistik desa/kelurahan mampu melakukan pengolahan data dalam bentuk tabel dan grafik?</p>
+                                <p>
+                                    <a href="https://drive.google.com/file/d/18TFFNbZaDUt9JJkMalDhlynYP4--7ZlE/preview" target="_blank">Baca Modul Pengolahan Data</a>
+                                </p>
+                                <p>
+                                    <a href="https://drive.google.com/file/d/1Gakcm7etk2V-YQ-PFkC51Rbf3oO1kvXN/preview" target="_blank">Baca Modul Analisis</a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -190,6 +202,9 @@
                                     <li>Buku publikasi statistik lainnya</li>
                                     <li>Website desa/kelurahan yang menyajikan data desa/kelurahan</li>
                                 </ol>
+                                <p>
+                                    <a href="https://drive.google.com/file/d/1WLuE8fo5vu3QADpTPuYKJQUTQdY6Xs6P/preview" target="_blank">Baca Modul Diseminasi Statistik</a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -213,6 +228,9 @@
                                 <p>Apakah desa/kelurahan mempunyai ragam data Profil desa/kelurahan (Prodeskel) sesuai dengan Permendagri 12 Tahun 2007? (Lampiran list ragam data dapat dilihat pada link berikut http://s.bps.go.id/List_Ragam_Data )</p>
                                 <p>Apakah data di desa/kelurahan sudah konsisten (sama) isiannya antar media publikasi?</p>
                                 <p>Apakah desa/kelurahan sudah memliki metadata statistik?</p>
+                                <p>
+                                    <a href="https://drive.google.com/file/d/1w6YVhX4ZnjzuiKy6GVHEpHG0cmWPLaPe/view?usp=sharing" target="_blank">Selengkapnya tentang Manajemen Kualitas Data</a>
+                                </p>
                             </div>
                         </div>
                     </div>
