apdet informasi romantik

--- a/pss.html
+++ b/pss.html
@@ -786,7 +786,6 @@
                                     <a href="pss/index.html" target="_blank">Open Data Jabar</a>
                                 </li>
                             </ul>
-                            
                         </p>
                     </div>
                 </div>
@@ -807,12 +806,36 @@
                     <div class="accordion-body">
                         <br>
                         <p>
-                            <a href="https://romantik.web.bps.go.id/rekomendasi-terbit?search=&tahun=2025&provinsi=3200" target="_blank">2025</a> | <a href="https://romantik.web.bps.go.id/rekomendasi-terbit?search=&tahun=2024&provinsi=3200" target="_blank">2024</a> | <a href="https://romantik.web.bps.go.id/rekomendasi-terbit?search=&tahun=2023&provinsi=3200" target="_blank">2023</a> | <a href="https://romantik.web.bps.go.id/rekomendasi-terbit?search=&tahun=2022&provinsi=3200" target="_blank">2022</a> | <a href="https://romantik.web.bps.go.id/rekomendasi-terbit?search=&tahun=2021&provinsi=3200" target="_blank">2021</a> | <a href="https://romantik.bps.go.id/site/kegiatan/?kueri=jawa+barat&yt0=" target="_blank">Sebelumnya</a> | <a href="https://romantik.bps.go.id/files/Formulir_FP-KPA.docx" target="_blank">Unduh Formulir Pemberitahuan Kompilasi Produk Administrasi</a> | <a href="https://romantik.bps.go.id/files/Formulir_FS3.doc" target="_blank">Unduh Formulir Pemberitahuan Survei Statistik Sektoral</a> | <a href="https://romantik.web.bps.go.id/panduan" target="_blank">Panduan Romantik</a>
+                            Dalam rangka melaksanakan amanat Undang-Undang No. 16 Tahun 1997, ditetapkan Peraturan Pemerintah Nomor 51 Tahun 1999 tentang Penyelenggaraan Statistik yang salah satu poinnya menjelaskan bahwa penyelenggara kegiatan statistik sektoral wajib:
+                            <ol>
+                                <li>memberitahukan rencana penyelenggaraan kegiatan statistik sektoral kepada BPS;</li>
+                                <li>mengikuti rekomendasi kegiatan statistik yang diberikan BPS; dan</li>
+                                <li>menyerahkan hasil penyelenggaraan kegiatan statistik sektoral yang dilakukannya kepada BPS.</li>
+                            </ol>
+                            
+                            Hal ini selaras dengan Peraturan Pemerintah Nomor 18 Tahun 2016 tentang Perangkat Daerah yang menyatakan bahwa indikator penting untuk mengukur pemetaan intensitas urusan pemerintahan dan penentuan beban kerja perangkat daerah urusan pemerintahan bidang statistik adalah <b>”Jumlah survei dan kompilasi produk administrasi bidang sosial, ekonomi, politik, hukum dan HAM yang mendapatkan rekomendasi BPS”</b>.
+                        </p>
+                        <h3>Mekanisme Layanan Rekomendasi Statistik</h3>
+                        <p>
+                            <ol>
+                                <li><b>Pengajuan</b>, Pengguna layanan masuk ke aplikasi Romantik dan mengisi formulir rancangan kegiatan statistik.</li>
+                                <li><b>Pemeriksaan</b>, Petugas layanan memeriksa formulir rancangan kegiatan statistik. Jika perlu perlu diperbaiki, petugas akan mengirim kembali ke pengguna layanan untuk diperbaiki.</li>
+                                <li><b>Perbaikan</b>, Pengguna layanan memperbaiki formulir sesuai catatan perbaikan yang diberikan petugas layanan.</li>
+                                <li><b>Pengesahan</b>, Petugas layanan mengesahkan formulir rancangan kegiatan statistik yang layak.</li>
+                                <li><b>Penerbitan</b>, Petugas layanan menerbitkan surat rekomendasi dan mengirimkan ke pengguna layanan.</li>
+                            </ol>
+                        </p>
+                        <h3>Daftar Rekomendasi Terbit</h3>
+                        <p>
+                            <a href="https://romantik.web.bps.go.id/rekomendasi-terbit?search=&tahun=2025&provinsi=3200" target="_blank">2025</a> | <a href="https://romantik.web.bps.go.id/rekomendasi-terbit?search=&tahun=2024&provinsi=3200" target="_blank">2024</a> | <a href="https://romantik.web.bps.go.id/rekomendasi-terbit?search=&tahun=2023&provinsi=3200" target="_blank">2023</a> | <a href="https://romantik.web.bps.go.id/rekomendasi-terbit?search=&tahun=2022&provinsi=3200" target="_blank">2022</a> | <a href="https://romantik.web.bps.go.id/rekomendasi-terbit?search=&tahun=2021&provinsi=3200" target="_blank">2021</a> | <a href="https://romantik.bps.go.id/site/kegiatan/?kueri=jawa+barat&yt0=" target="_blank">Sebelumnya</a> 
+                        </p>
+                        <h3>Panduan Romantik</h3>
+                        <p>    
+                            <a href="https://romantik.bps.go.id/files/Formulir_FP-KPA.docx" target="_blank">Unduh Formulir Pemberitahuan Kompilasi Produk Administrasi</a> | <a href="https://romantik.bps.go.id/files/Formulir_FS3.doc" target="_blank">Unduh Formulir Pemberitahuan Survei Statistik Sektoral</a> | <a href="https://romantik.web.bps.go.id/panduan" target="_blank">Panduan Romantik</a>
                         </p>
                     </div>
                 </div>
             </div>
-
         </div>
     </main>
 
