--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                         <a class="nav-link" href="cantik.html">Desa Cantik</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="pst.html">PST</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">K I P</a>
                     </li>
                     <li class="nav-item">
