--- a/pss.html
+++ b/pss.html
@@ -37,6 +37,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="cantik.html">Desa Cantik</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pst.html">PST</a>
+                    </li>
                 </ul>
             </div>
         </div>
