penambahan standar pelayanan dalam html

--- a/pst.html
+++ b/pst.html
@@ -167,10 +167,10 @@
 
         <!-- Tab Content - Content will be dynamically loaded by JavaScript -->
         <div class="tab-content border border-top-0 p-3" id="myTabContent">
-            <!-- Indikator 1 -->
+            <!-- Perpustakaan -->
             <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
                 <h3>Layanan Perpustakaan</h3>
-                <a href="https://ppid.bps.go.id/upload/img/2__Standar_Pelayanan_Perpustakaan_1740628233549.png" target="_blank">Standar Layanan</a>
+                <a href="https://ppid.bps.go.id/upload/img/2__Standar_Pelayanan_Perpustakaan_1740628233549.png" target="_blank">Standar Layanan</a> | <a href="https://drive.google.com/file/d/1QmkMOJFYpP9bImAQY989I4ugdTkzbrj5/view?usp=sharing" target="_blank">Prosedur Layanan</a>
                 <br>
                 <br>
                 <div class="accordion" id="accordionTab1">
@@ -228,13 +228,27 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading3Tab1">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3Tab1" aria-expanded="false" aria-controls="collapse3Tab1">
+                                Standar Layanan
+                            </button>
+                        </h2>
+                        <div id="collapse3Tab1" class="accordion-collapse collapse" aria-labelledby="heading3Tab1" data-bs-parent="#accordionTab1">
+                            <div class="accordion-body">
+                                <br>
+                                <iframe src="pst/perpustakaan.html" width="100%" height="600px"></iframe>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <!-- Indikator 2 -->
+            <!-- Konsultasi -->
             <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
                 <h3>Layanan Konsultasi Statistik</h3>
-                <a href="https://ppid.bps.go.id/upload/img/3__Standar_Pelayanan_Konsultasi_Statistik_1740628274544.png" target="_blank">Standar Layanan</a>
+                <a href="https://ppid.bps.go.id/upload/img/3__Standar_Pelayanan_Konsultasi_Statistik_1740628274544.png" target="_blank">Standar Layanan</a> | <a href="https://drive.google.com/file/d/138GPd_Cz9bQOZV_JAHffv1QY325muvb1/view?usp=sharing" target="_blank">Prosedur Layanan</a>
                 <br>
                 <br>
                 <div class="accordion" id="accordionTab2">
@@ -280,13 +294,27 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading3Tab2">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3Tab2" aria-expanded="false" aria-controls="collapse3Tab2">
+                                Standar Layanan
+                            </button>
+                        </h2>
+                        <div id="collapse3Tab2" class="accordion-collapse collapse" aria-labelledby="heading3Tab2" data-bs-parent="#accordionTab2">
+                            <div class="accordion-body">
+                                <br>
+                                <iframe src="pst/konsultasi.html" width="100%" height="600px"></iframe>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <!-- Indikator 3 -->
+            <!-- Rekomendasi -->
             <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
                 <h3>Layanan Rekomendasi Kegiatan Statistik</h3>
-                <a href="https://ppid.bps.go.id/upload/img/5__Standar_Pelayanan_Rekomendasi_Kegiatan_Statistik_1740628362622.png" target="_blank">Standar Layanan</a>
+                <a href="https://ppid.bps.go.id/upload/img/5__Standar_Pelayanan_Rekomendasi_Kegiatan_Statistik_1740628362622.png" target="_blank">Standar Layanan</a> | <a href="https://drive.google.com/file/d/1INDZriQCFBunRJDwpgqIE9UGF_2Bqohu/view?usp=sharing" target="_blank">Prosedur Layanan</a>
                 <br>
                 <br>
                 <div class="accordion" id="accordionTab3">
@@ -340,13 +368,27 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading3Tab3">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3Tab3" aria-expanded="false" aria-controls="collapse3Tab3">
+                                Standar Layanan
+                            </button>
+                        </h2>
+                        <div id="collapse3Tab3" class="accordion-collapse collapse" aria-labelledby="heading3Tab3" data-bs-parent="#accordionTab3">
+                            <div class="accordion-body">
+                                <br>
+                                <iframe src="pst/rekomendasi.html" width="100%" height="600px"></iframe>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <!-- Indikator 4 -->
+            <!-- Penjualan -->
             <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
                 <h3>Layanan Produk Statistik Berbayar</h3>
-                <a href="https://ppid.bps.go.id/upload/img/4__Standar_Pelayanan_Penjualan_Produk_Statistik_1740628332043.png" target="_blank">Standar Layanan</a>
+                <a href="https://ppid.bps.go.id/upload/img/4__Standar_Pelayanan_Penjualan_Produk_Statistik_1740628332043.png" target="_blank">Standar Layanan</a> | <a href="https://drive.google.com/file/d/19Zecoweqd-7RJ8-XzFBoSEfLJXdmyChD/view?usp=sharing" target="_blank">Prosedur Layanan</a>
                 <br>
                 <br>
                 <div class="accordion" id="accordionTab4">
@@ -401,6 +443,20 @@
                                         </li>
                                     </ul>
                                 </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading3Tab4">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3Tab4" aria-expanded="false" aria-controls="collapse3Tab4">
+                                Standar Layanan
+                            </button>
+                        </h2>
+                        <div id="collapse3Tab4" class="accordion-collapse collapse" aria-labelledby="heading3Tab4" data-bs-parent="#accordionTab4">
+                            <div class="accordion-body">
+                                <br>
+                                <iframe src="pst/penjualan.html" width="100%" height="600px"></iframe>
                             </div>
                         </div>
                     </div>
