menambah tautan prosedur

--- a/pst.html
+++ b/pst.html
@@ -140,6 +140,10 @@
                                 <li><a href="https://ppid.bps.go.id/upload/img/4__Standar_Pelayanan_Penjualan_Produk_Statistik_1740628332043.png" target="_blank">Standar Pelayanan Produk Statistik Berbayar</a></li>
                                 <li><a href="https://drive.bps.go.id/s/CqidjeiLYrxqXAp" target="_blank">PNBP BPS Terbaru</a></li>
                                 <li><a href="https://ppid.bps.go.id/upload/doc/Pengenaan_Tarif_Nol_Rupiah_di_BPS__Leaflet__1646724492.pdf" target="_blank">PNBP Nol Rupiah</a></li>
+                                <li><a href="https://drive.google.com/file/d/1QmkMOJFYpP9bImAQY989I4ugdTkzbrj5/view?usp=drive_link" target="_blank">Prosedur Layanan Perpustakaan</a></li>
+                                <li><a href="https://drive.google.com/file/d/138GPd_Cz9bQOZV_JAHffv1QY325muvb1/view?usp=drive_link" target="_blank">Prosedur Layanan Konsultasi Statistik</a></li>
+                                <li><a href="https://drive.google.com/file/d/1INDZriQCFBunRJDwpgqIE9UGF_2Bqohu/view?usp=drive_link" target="_blank">Prosedur Layanan Rekomendasi Kegiatan Statistik</a></li>
+                                <li><a href="https://drive.google.com/file/d/19Zecoweqd-7RJ8-XzFBoSEfLJXdmyChD/view?usp=drive_link" target="_blank">Prosedur Layanan Produk Statistik Berbayar</a></li>
                             </ul>
                         </p>
                     </div>
