--- a/pss.html
+++ b/pss.html
@@ -854,12 +854,14 @@
                     <div class="accordion-body">
                         <br>
                         <p>
-                            <a href="https://sirusa-backend.bps.go.id/pembinaan/public" target="_blank">Lapor Kegiatan Pembinaan</a>
+                            <ul>
+                                <li><a href="https://sirusa-backend.bps.go.id/pembinaan/public" target="_blank">Lapor Kegiatan Pembinaan</a></li>
+                                <li><a href="https://drive.google.com/file/d/1l0WwqoOhj-_3P4zQ4gie6zcpEq5f7mZi/view?usp=sharing" target="_blank">Petunjuk Teknis Pembinaan Statistik Sektoral</a></li>
+                            </ul>
                         </p>
                     </div>
                 </div>
             </div>
-
         </div>
     </main>
 
