apdet konten zi, pekppp dan pst

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                     <li>Yang dimaksud penetapan Standar Pelayanan untuk sebagian jenis pelayanan adalah penetapan SP yang belum mencakup seluruh jenis pelayanan yang ada dalam suatu unit pelayanan.</li>
                                     <li>Penyusunan Standar Pelayanan dapat mengacu pada Peraturan Menteri Nomor 15 Tahun 2014.</li>
                                 </ul>
-
+                                <a href="https://ppid.bps.go.id/upload/img/2__Standar_Pelayanan_Perpustakaan_1740628233549.png" target="_blank">Standar Pelayanan Perpustakaan</a> | <a href="https://ppid.bps.go.id/upload/img/3__Standar_Pelayanan_Konsultasi_Statistik_1740628274544.png" target="_blank">Standar Pelayanan Konsultasi Statistik</a> | <a href="https://ppid.bps.go.id/upload/img/5__Standar_Pelayanan_Rekomendasi_Kegiatan_Statistik_1740628362622.png" target="_blank">Standar Pelayanan Rekomendasi Kegiatan Statistik</a> | <a href="https://ppid.bps.go.id/upload/img/4__Standar_Pelayanan_Penjualan_Produk_Statistik_1740628332043.png" target="_blank">Standar Pelayanan Produk Statistik Berbayar</a>
                             </div>
                         </div>
                     </div>
@@ -138,14 +138,15 @@
                                 <br>
                                 <p>SP yang ditetapkan wajib dipublikasikan pada media publikasi yang tersedia, dan dapat diakses dengan mudah oleh masyarakat. Media Publikasi tersebut dapat berupa:</p>
                                 <ol>
-                                <li>Media Cetak/ Non Elektronik. Media yang termasuk didalamnya yakni brosur, leaflet, majalah, pamphlet, buku saku, papan pengumuman dan sejenisnya.</li>
-                                <li>Media Elektronik. Media yang termasuk didalamnya yakni TV, layar monitor, kios-K, link publikasi, dan sejenisnya.</li>
-                                <li>Media sosial. Media yang termasuk didalamnya yakni Facebook, Instagram, Twitter, Whatsapp, dan sejenisnya.</li>
-                                <li>Website. Media yang termasuk di dalamnya yakni website, dan subsite.</li>
-                                <li>Aplikasi yang bisa diunduh, yaitu suatu aplikasi yang dikembangkan UPP yang dapat diunduh oleh pengguna layanan, baik berbasis android, IOS, maupun OS lainnya.</li>
-                                <li>SIPP Nasional, yaitu suatu sistem nasional yang disediakan sebagai media publikasi dan informasi terkait pelayanan publik.</li>
-                                <li>Papan reklame: Videotron/billboard/baliho/media sejenis lainnya.</li>
+                                    <li>Media Cetak/ Non Elektronik. Media yang termasuk didalamnya yakni brosur, leaflet, majalah, pamphlet, buku saku, papan pengumuman dan sejenisnya.</li>
+                                    <li>Media Elektronik. Media yang termasuk didalamnya yakni TV, layar monitor, kios-K, link publikasi, dan sejenisnya.</li>
+                                    <li>Media sosial. Media yang termasuk didalamnya yakni Facebook, Instagram, Twitter, Whatsapp, dan sejenisnya.</li>
+                                    <li>Website. Media yang termasuk di dalamnya yakni website, dan subsite.</li>
+                                    <li>Aplikasi yang bisa diunduh, yaitu suatu aplikasi yang dikembangkan UPP yang dapat diunduh oleh pengguna layanan, baik berbasis android, IOS, maupun OS lainnya.</li>
+                                    <li>SIPP Nasional, yaitu suatu sistem nasional yang disediakan sebagai media publikasi dan informasi terkait pelayanan publik.</li>
+                                    <li>Papan reklame: Videotron/billboard/baliho/media sejenis lainnya.</li>
                                 </ol>
+                                <a href="https://jabar.bps.go.id" target="">Web BPS Jabar</a> | <a href="https://ppid.bps.go.id/?mfd=3200" target="_blank">Web PPID Jabar</a> | <a href="https://sippn.menpan.go.id" target="_blank">Web SIPPN MenPAN-RB</a>
                             </div>
                         </div>
                     </div>
@@ -185,6 +186,8 @@
                                 <li>Media Cetak/ Non Elektronik. Media yang termasuk didalamnya yakni brosur, leaflet, majalah, pamphlet, buku saku, papan pengumuman dan sejenisnya;</li>
                                 <li>Media Elektronik. Media yang termasuk didalamnya yakni TV, layar monitor, kiosK, dan sejenisnya.</li>
                                 </ol>
+
+                                <a href="https://ppid.bps.go.id/upload/doc/Maklumat_Pelayanan_1755687354.png" target="_blank">Maklumat Pelayanan</a>
                             </div>
                         </div>
                     </div>
@@ -801,6 +804,12 @@
                                         </li>
                                         <li>
                                             <a href="https://www.youtube.com/watch?v=Ie3V8VrxjGE&pp=ygUeYXNwZWsgaW5vdmFzaSBwZWxheWFuYW4gcHVibGlr" target="_blank">Inovasi Berkelanjutan</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://inovasi.bps.go.id" target="_blank">Daftar Inovasi BPS</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://sinovik.menpan.go.id" target="_blank">Sinovik MenPAN-RB</a>
                                         </li>
                                     </ul>
                                 </p>
