--- a/rbzi.html
+++ b/rbzi.html
@@ -288,6 +288,8 @@
                                 </p>
                                 <p>b. Prosedur operasional tetap (SOP) telah diterapkan</p>
                                 <p>c. Prosedur operasional tetap (SOP) telah dievaluasi</p>
+                                <br><br>
+                                <a href="https://drive.google.com/file/d/1QmkMOJFYpP9bImAQY989I4ugdTkzbrj5/view?usp=drive_link" target="_blank">Prosedur Layanan Perpustakaan</a> | <a href="https://drive.google.com/file/d/138GPd_Cz9bQOZV_JAHffv1QY325muvb1/view?usp=drive_link" target="_blank">Prosedur Layanan Konsultasi Statistik</a> | <a href="https://drive.google.com/file/d/1INDZriQCFBunRJDwpgqIE9UGF_2Bqohu/view?usp=drive_link" target="_blank">Prosedur Layanan Rekomendasi Kegiatan Statistik</a> | <a href="https://drive.google.com/file/d/19Zecoweqd-7RJ8-XzFBoSEfLJXdmyChD/view?usp=drive_link" target="_blank">Prosedur Layanan Produk Statistik Berbayar</a>
                             </div>
                         </div>
                     </div>
