--- a/pst.html
+++ b/pst.html
@@ -150,6 +150,29 @@
                 </div>
             </div>
         </div>
+
+        <div class="accordion">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="accordion5">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
+                        Jadwal Piket
+                    </button>
+                </h2>
+                <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5" data-bs-parent="#accordion5">
+                    <div class="accordion-body">
+                        <br>
+                        <p>
+                            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQaGkAivNz_RQH0BaTNZesBYYGQmf_U-JdQVBcJcpERXzSShamZjGTnNRv6R4OIsQ/pubhtml?widget=true&amp;headers=false" width="100%" height="600px"></iframe>
+                        </p>
+                        <p>
+                            <a href="https://docs.google.com/spreadsheets/d/1ypu8fUQdWKGW65RNuF6kOrhtmOsk6vgp/edit?usp=sharing&ouid=111867882724584455003&rtpof=true&sd=true" target="_blank">Buka di windows baru</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        
     </main>
 
     <main class="container my-4">
