--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                         <a class="nav-link" href="rbzi.html">WBK-WBBM</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="spip.html">SPIP</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="sakip.html">SAKIP</a>
                     </li>
                     <li class="nav-item">
