--- a/rbzi.html
+++ b/rbzi.html
@@ -13,17 +13,20 @@
     <!-- Sticky Header -->
     <header class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">RB-ZI-WBK-WBBM</a>
+            <a class="navbar-brand" href="#">Reformasi Birokrasi</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">PEKPPP</a>
+                        <a class="nav-link" aria-current="page" href="index.html">BerAKHLAK</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="rbzi.html">WBK-WBBM</a>
+                        <a class="nav-link" aria-current="page" href="pekppp.html">PEKPPP</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="rbzi.html">ZonI</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="spip.html">SPIP</a>
@@ -32,13 +35,13 @@
                         <a class="nav-link" href="sakip.html">SAKIP</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pss.html">P S S</a>
+                        <a class="nav-link" href="pss.html">PSS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="epss.html">E P S S</a>
+                        <a class="nav-link" href="epss.html">EPSS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cantik.html">Desa Cantik</a>
+                        <a class="nav-link" href="cantik.html">Cantik</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="pst.html">PST</a>
