menambah 5 budaya organisasi di berakhlak

--- a/pekppp.html
+++ b/pekppp.html
@@ -58,6 +58,22 @@
     </header>
 
     <main class="container my-4">
+        <div class="card">
+            <div class="card-body">
+                <p>
+                    <b>PEKPPP</b> adalah suatu upaya pengukuran sistematis pada suatu unit kerja dalam jangka waktu tertentu guna memperoleh nilai indeks pelayanan publik.
+                </p>
+                <p>
+                    <b>Pelayanan publik</b> adalah kegiatan atau rangkaian kegiatan dalam rangka pemenuhan kebutuhan pelayanan sesuai dengan ketentuan perundang-undangan bagi setiap warga negara dan penduduk atas barang, jasa dan/atau pelayanan administratif yang disediakan oleh penyelenggara pelayanan publik.
+                </p>
+                <p>
+                    <strong><a href="https://drive.google.com/file/d/1StspX3MXeFqyykN6N_qLxCn2TvChw51D/view?usp=sharing" target="_blank">Baca Pedoman</a></strong>
+                </p>
+            </div>
+        </div>
+    </main>
+
+    <main class="container my-4">
         <!-- Tab Navigation -->
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
