--- a/spip.html
+++ b/spip.html
@@ -443,6 +443,9 @@
                                     <a href="https://drive.google.com/file/d/1Qak8xJ5JnzLltR-tvgzu3Vvx-xMooE3t/view?usp=sharing" target="_blank">Manajemen Risiko Berbasis ISO 31000</a>
                                 </li>
                                 <li>
+                                    <a href="https://docs.google.com/document/d/114hpMX9_E9FGTDVduDLT5Qt_rkvSr4g18aSeae02yBY/edit?usp=drive_link" target="_blank">Contoh Dokumen Manajemen Risiko ISO 31000</a>
+                                </li>
+                                <li>
                                     <a href="https://docs.google.com/spreadsheets/d/1WmAX3M11OJ0nTY6zfsynJl0Gn4QadDE1W159q8QQdOo/edit?usp=sharing" target="_blank">Penjelasan Parameter SPIP</a>
                                 </li>
                             </ul>
