menambahkan footer bang zoni

--- a/pst.html
+++ b/pst.html
@@ -508,7 +508,12 @@
 
     <footer class="text-center">
         <hr class="divider">
-        <p>Mari Peduli: Mari Budayakan Membaca - Portal Edukasi dan Literasi</p>
+        <p>
+            PEDULI BANG ZONI
+            <br>
+            Portal Edukasi & Literasi Pembangunan Zona Integritas
+        </p>
+        
         <p>@fhy3273</p>
     </footer>
     
