perbaikan produk konsultasi

--- a/pst/konsultasi.html
+++ b/pst/konsultasi.html
@@ -117,7 +117,7 @@
       <div style="flex:1; min-width:180px; background:#fff;border-top:6px solid #013973; border-radius:16px;padding:19px 19px 11px 19px;box-shadow:0 2px 13px rgba(41,83,95,0.09);">
         <h2 style="color:#013973; font-size:1.13rem; font-weight:700;">Produk Pelayanan</h2>
         <ul style="margin:0 0 0 18px;">
-          <li>Jasa Konsultasi Informasi (Data/Metadata/Klasifikasi/Penyelenggaraan Statistik)</li>
+          <li>Jasa Konsultasi Informasi (Data/ Metadata/ Klasifikasi/ Penyelenggaraan Statistik)</li>
         </ul>
       </div>
     </div>
