--- a/pekppp.html
+++ b/pekppp.html
@@ -47,6 +47,9 @@
                         <a class="nav-link" href="pst.html">PST</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="potik.html">Potik</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">KIP</a>
                     </li>
                     <li class="nav-item">
