--- a/pst.html
+++ b/pst.html
@@ -46,6 +46,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="#">PST</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="potik.html">Potik</a>
+                    </li>
                 </ul>
             </div>
         </div>
